part2/project-app/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dwk-project-app-svc
spec:
  type: ClusterIP
  selector:
    app: dwk-project-app
  ports:
    - name: frontend
      port: 2345
      protocol: TCP
      targetPort: 3003
    - name: backend
      port: 2346
      protocol: TCP
      targetPort: 3004
